--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-loader": "^4.0.2",
     "html-webpack-plugin": "^4.3.0",
+    "mocha": "^8.1.1",
     "prettier": "2.0.5",
     "prettier-webpack-plugin": "^1.2.0",
     "webpack": "^4.44.1",
