--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {},
-  "name": "draw-with-me-solo",
+  "name": "input",
   "description": "An easy mouse-drawing app in browser.",
   "version": "1.0.0",
   "main": "src/index.js",
@@ -30,7 +30,11 @@
     "type": "git",
     "url": "git+https://github.com/jjayeon/draw-with-me-solo.git"
   },
-  "author": "",
+  "files": [
+    "./src/lib/Input.js",
+    "./src/lib/Helpers.js"
+  ],
+  "author": "jjayeon",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/jjayeon/draw-with-me-solo/issues"
