--- a/package.json
+++ b/package.json
@@ -1,48 +1,52 @@
 {
-  "devDependencies": {
-    "@babel/cli": "^7.13.10",
-    "@babel/core": "^7.13.10",
-    "@babel/preset-env": "^7.13.10",
-    "babel-loader": "^8.2.2",
-    "clean-webpack-plugin": "^3.0.0",
-    "eslint": "^7.21.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-loader": "^4.0.2",
-    "html-webpack-plugin": "^4.5.2",
-    "mocha": "^8.3.1",
-    "prettier": "2.0.5",
-    "prettier-webpack-plugin": "^1.2.0",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.2"
-  },
-  "dependencies": {},
-  "name": "@jjy/input",
-  "description": "An easy mouse-drawing app in browser.",
-  "version": "1.0.1",
-  "main": "src/lib/Input.js",
-  "scripts": {
-    "start": "webpack-dev-server --config webpack.config.js --mode development",
-    "build": "webpack --config webpack.config.js --mode production",
-    "test": "mocha src/test/Helpers.test.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jjayeon/inputjs.git"
-  },
-  "files": [
-    "src/lib/Input.js",
-    "src/lib/Helpers.js"
-  ],
-  "author": "jjayeon",
-  "license": "LGPL-3.0-or-later",
-  "bugs": {
-    "url": "https://github.com/jjayeon/inputjs/issues"
-  },
-  "homepage": "https://github.com/jjayeon/inputjs#readme",
-  "keywords": [
-    "input",
-    "keyboard",
-    "mouse"
-  ]
+    "devDependencies": {
+        "@babel/cli": "^7.13.10",
+        "@babel/core": "^7.13.10",
+        "@babel/preset-env": "^7.13.10",
+        "babel-loader": "^8.2.2",
+        "clean-webpack-plugin": "^3.0.0",
+        "eslint": "^7.21.0",
+        "eslint-config-prettier": "^6.15.0",
+        "eslint-loader": "^4.0.2",
+        "gh-pages": "^3.2.3",
+        "html-webpack-plugin": "^4.5.2",
+        "mocha": "^8.3.1",
+        "prettier": "2.0.5",
+        "prettier-webpack-plugin": "^1.2.0",
+        "webpack": "^4.46.0",
+        "webpack-cli": "^3.3.12",
+        "webpack-dev-server": "^3.11.2"
+    },
+    "dependencies": {},
+    "name": "@jjy/input",
+    "description": "An easy mouse-drawing app in browser.",
+    "version": "1.0.1",
+    "homepage": "https://autumnchiu.com/inputjs",
+    "main": "src/lib/Input.js",
+    "scripts": {
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build",
+        "start": "webpack-dev-server --config webpack.config.js --mode development",
+        "build": "webpack --config webpack.config.js --mode production",
+        "test": "mocha src/test/Helpers.test.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/jjayeon/inputjs.git"
+    },
+    "files": [
+        "src/lib/Input.js",
+        "src/lib/Helpers.js"
+    ],
+    "author": "jjayeon",
+    "license": "LGPL-3.0-or-later",
+    "bugs": {
+        "url": "https://github.com/jjayeon/inputjs/issues"
+    },
+    "homepage": "https://github.com/jjayeon/inputjs#readme",
+    "keywords": [
+        "input",
+        "keyboard",
+        "mouse"
+    ]
 }
